syntax = "proto3";

package bugu_obfusion.service.v1;

option go_package = "bugu/api/obfusion/service/v1;v1";

service BuguObfusion {
  rpc Obfusion (ObfusionRequest) returns (ObfusionReply) {};
};

message ObfusionRequest {
  repeated bytes data = 1;
  uint32 size = 2;
}

message ObfusionReply {
  repeated bytes data = 1;
  uint32 size = 3;
}